add HTML and CSS

--- a/templates/home.html
+++ b/templates/home.html
@@ -25,14 +25,21 @@
         font-weight: nornormal       
       }
 
-      p {
+      .bodytext {
         font-family: Roboto;
         color: rgb(80, 80, 80)
+        
+      }
+
+      #container {
+        max-width: 720px;
+        margin: 0 auto;
         
       }
     </style>
   </head>
   <body>
+    <div id="container">
     <h1>Jovian Careers</h1>
     <img src="https://python-web-app.wjgk0822.repl.co/static/banner.jpg" 
       height="320" >
@@ -42,8 +49,16 @@
       
     </p>
     <h2>Open Positions</h2>
-    <p>TODO - Show the jobs here</p>
+    <p class="bodytext">TODO - Show the jobs here</p>
+    <div style="text-align:center;">
     <button>Contact Us</button>
+      <p>Copyright 2022, Jovian</p>
+    </div>
+    </div>
+  
+        
+
+      
     
   </body>
 </html>
