--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,8 @@
       #banner {
         height: 360px;
         width: 100%;
+        object-fit:cover;
+        margin-bottom: 16px;
         
       }
     </style>
@@ -17,17 +19,24 @@
     
   </head>
   <body>
-    <div class="container">
-    <h1 class="text-center mt-2 mb-4">{{company_name}} Careers</h1>
+    {% include 'nav.html' %}
     <img class="img-fluid" id="banner"
       src="https://python-web-app.wjgk0822.repl.co/static/banner.jpg" 
       height="320" >
-    <h2 class="text-center mt-2 mb-4">About Jovian</h2>
+    <div class="container">
+    <h1 class="text-center mt-2 mb-4">{{company_name}} Careers</h1>
     
+    
+    <div class="row" style="margin-bottom:16px">
+      <div class="col-md-6">
     <p class="lead">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       
     </p>
+      </div>
+      <div class="d-none d-md-block col-md-6">
+      <img src="static/people.jpg" style="height:320px;border-radius:4px;">
+    </div>
     <h2 class="text-center mt-2 mb-4">Job Openings</h2>
     <div >
       {% for job in jobs %}
@@ -35,10 +44,10 @@
       {% endfor %}
     </div>
     <div class="text-center">
-    <button class="btn btn-primary btn-lg">Contact Us</button>
-      <p class="mt-4">Copyright 2022, Jovian</p>
+    <a class="btn btn-primary btn-lg" href="mailto:wjgk52447@gmail.com?subject=Question%20about%20Job%20Openings&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20questions%3A%20%3Center%20question%20here%3E">Contact Us</a>
     </div>
     </div>
+    {% include 'footer.html' %}
   
         
 
