added connection to db

--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -5,7 +5,7 @@
           {{job['title']}}
         </h4>
         <div>
-          <b>Location:</b> {{job['Location']}}
+          <b>Location:</b> {{job['location']}}
         </div>
         {% if 'salary' in job %}
         <div>
