--- a/templates/home.html
+++ b/templates/home.html
@@ -2,29 +2,17 @@
 <html>
   <head>
     <title>Jovian Careers</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <style>
-      #banner {
-        height: 360px;
-        width: 100%;
-        object-fit:cover;
-        margin-bottom: 16px;
-        
-      }
-    </style>
+    {% include 'bootstrap.html' %}
+    
       
    
     
   </head>
   <body>
     {% include 'nav.html' %}
-    <img class="img-fluid" id="banner"
-      src="https://python-web-app.wjgk0822.repl.co/static/banner.jpg" 
-      height="320" >
+    {% include 'banner.html' %}
     <div class="container">
-    <h1 class="text-center mt-2 mb-4">{{company_name}} Careers</h1>
+    <h1 class="text-center mt-2 mb-4">Jovian Careers</h1>
     
     
     <div class="row" style="margin-bottom:16px">
